test/classes/initializers/compilerGenerated/pragmaOnly/definesCtorMultiple.good
definesCtorMultiple.chpl:6: error: cannot apply 'use default init' to type 'Foo', it defines a constructor here
definesCtorMultiple.chpl:10: error: cannot apply 'use default init' to type 'Foo', it defines a constructor here
