test/classes/initializers/compilerGenerated/pragmaOnly/definesCtorMultiple.compopts
 # definesCtorMultiple.good
--force-initializers
--no-force-initializers
